added calendar selector and update the main calendar where it was selected. Changed package from orchid to arkvis.orchid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">orchid</string>
+    <string name="app_name">Orchid</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -9,4 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="fab">fab</string>
+    <string name="orchid_days_selector">Orchid Day Selector</string>
+    <string name="orchid_day_selector_title">Select Orchid Day</string>
 </resources>
